# lucid-component-chrony

./: .gitignore  Makefile  pyproject.toml
docs/: implementation.md
src/lucid_component_chrony/: __init__.py  chrony.conf.template  chrony.yaml  client.py  component.py  helper_installer.py  helper_server.py  protocol.py
src/lucid_component_chrony/systemd/: lucid-chrony-helper.service
tests/: conftest.py  test_contract.py  test_tracking_parser.py
